--- a/reference.bib
+++ b/reference.bib
@@ -1,4 +1,4 @@
-﻿  @Article{visdat,
+  @Article{visdat,
     title = {visdat: Visualising Whole Data Frames},
     author = {Nicholas Tierney},
     doi = {10.21105/joss.00355},
@@ -225,4 +225,12 @@
   note = {Accessed: 2020-08-24},
   year = {2020},
   author = {{Tidy Tuesday}}
+}
+
+@Manual{rlist,
+    title = {rlist: A Toolbox for Non-Tabular Data Manipulation},
+    author = {Kun Ren},
+    year = {2016},
+    note = {R package version 0.4.6.1},
+    url = {https://CRAN.R-project.org/package=rlist},
 }
