--- a/index.Rmd
+++ b/index.Rmd
@@ -37,6 +37,7 @@ library(wordcloud2)
 library(here)
 library(janitor)
 library(plotly)
+library(rlist)
 Sys.setlocale("LC_ALL","English")
 ```
 
@@ -492,13 +493,11 @@ temp <- temp %>%
 
 
 
-# What amusement parks have most injuries in Texas?
+## What amusement parks have most injuries in Texas?
 
 Since the injury reporting mechanism varies from state to state, we only analysed the injuries in each park in Texas (assuming that the injury reporting mechanism is the same across parks in Texas). We want to analyse not only the injuries happened every year in each park, but also the total injuries accross all the years in each park, so we also kept the injury records with missing injury_year values. Figure \@ref(fig:texas-parks-injuries) shows the top 10 amusement parks which have the most injuries in Texas. We can see that the Typhoon Texas - Austin park has the most amusement park injuries in Texas. The Skygroup Investments LLC DBA iFly Houston Memorial	park had a significant large number of injuries in 2015, while the Typhoon Texas Water Park had lots of injuries in 2016.
 
 ```{r texas-parks-injuries, fig.align='center', fig.cap="Amusement Park Injuries Ranking in Texas"}
-library(rlist)
-
 tx_injuries_top <- tx_injuries
 
 tx_injuries_top$name_of_operation <- tolower(tx_injuries_top$name_of_operation)
@@ -536,7 +535,7 @@ tx_injuries_top_lower %>%
   ggtitle("Amusement Parks with Most Injuries in Texas")
 ```
 
-# What manufacturer's product caused the most amusement park injuries?
+## What manufacturer's product caused the most amusement park injuries?
 In this part, we will find out the manufacturers whose products caused most amusement injuries over the years. This could remind amusement parks have devices from these manufacturers to maintain their devices carefully. Figure \@ref(fig:manufacturer-plot) shows the top 10 manufacturers whose products caused most amusement injuries over the years and the percentage of total injuries recorded in the safer_park data set.
 
 There are 254 manufacturers' records in this data set, and the total injuries of them is 8793, while the total injuries of the top 10 manufacturers is 2841. The top 10 manufacturers accounted for 32.3% of all amusement park injuries. It' is worth's noteworthy that in-house manufactured devices accounts for more than 10% of total injuries.
@@ -578,7 +577,7 @@ manufacturers %>%
 
 # Acknowledgments
 The following packages are used to produce this report:
-visdat [@visdat], dplyr [@dplyr], readr[@readr], tidyverse [@tidyverse], lubridate [@lubridate], knitr [@knitr], kableExtra [@kableExtra], tidytext [@tidytext], wordcloud [@wordcloud], janitor [@janitor], here [@here], plotly [@plotly]
+visdat [@visdat], dplyr [@dplyr], readr[@readr], tidyverse [@tidyverse], lubridate [@lubridate], knitr [@knitr], kableExtra [@kableExtra], tidytext [@tidytext], wordcloud [@wordcloud], janitor [@janitor], here [@here], plotly [@plotly], rlist[@rlist]
 
 
 # References
