--- a/index.Rmd
+++ b/index.Rmd
@@ -495,7 +495,7 @@ temp <- temp %>%
 
 ## What amusement parks have most injuries in Texas?
 
-Since the injury reporting mechanism varies from state to state, we only analysed the injuries in each park in Texas (assuming that the injury reporting mechanism is the same across parks in Texas). We want to analyse not only the injuries happened every year in each park, but also the total injuries accross all the years in each park, so we also kept the injury records with missing injury_year values. Figure \@ref(fig:texas-parks-injuries) shows the top 10 amusement parks which have the most injuries in Texas. We can see that the Typhoon Texas - Austin park has the most amusement park injuries in Texas. The Skygroup Investments LLC DBA iFly Houston Memorial	park had a significant large number of injuries in 2015, while the Typhoon Texas Water Park had lots of injuries in 2016.
+Since the injury reporting mechanism varies from state to state, we only analysed the injuries in each park in Texas (assuming that the injury reporting mechanism is the same across parks in Texas). We want to analyse not only the injuries happened every year in each park, but also the total injuries accross all the years in each park, so we also kept the injury records with missing injury_year values. Figure \@ref(fig:texas-parks-injuries) shows the top 10 amusement parks which have the most injuries in Texas. We can see that the Six Flags Over Texas park has the most amusement park injuries in Texas. The Skygroup Investments LLC DBA iFly Houston Memorial	park had a significant large number of injuries in 2015, while the Typhoon Texas - Austin Park had lots of injuries in 2016.
 
 ```{r texas-parks-injuries, fig.align='center', fig.cap="Amusement Park Injuries Ranking in Texas"}
 tx_injuries_top <- tx_injuries
@@ -513,8 +513,8 @@ tx_injuries_top_lower <- bind_rows(tx_injuries_tta, tx_injuries_other)
 
 tx_injuries_top10 <- tx_injuries_top_lower %>%
   group_by(name_of_operation) %>% 
-  summarise(total_injury = sum(injury_report_rec)) %>% 
-  arrange(desc(total_injury)) %>% 
+  tally() %>% 
+  arrange(desc(n)) %>% 
   head(10)
 
 injury_top_parks_tx <- as.list(unique(tx_injuries_top10$name_of_operation))
@@ -523,9 +523,9 @@ tx_injuries_top_lower %>%
   filter(name_of_operation %in% c(injury_top_parks_tx)) %>% 
   mutate(injury_year = as.factor(injury_year)) %>% 
   group_by(name_of_operation, injury_year) %>% 
-  summarise(total_injury = sum(injury_report_rec)) %>% 
+  tally() %>% 
   ggplot(aes(x = factor(name_of_operation, level = list.reverse(injury_top_parks_tx)), 
-             y = total_injury,
+             y = n,
              fill = injury_year)) + 
   geom_col() + 
   coord_flip() + 
