--- a/index.Rmd
+++ b/index.Rmd
@@ -160,7 +160,7 @@ As documentations related to accident reports provided by TDI are limited, it is
 
 According to Saferparks [-@saferpark], reporting criteria and its level of details, types of equipment included, and years covered vary widely across year, industry sector, jurisdictions, and other factors. Saferparks further stated that States that are transparent, vigilantly monitor safety incidents, and implement data management systems that are efficient will log higher number of accidents. In other words, having high number of injuries may be an indications of being more attentive to safety, not less [@saferpark]. 
 
-While the dataset can be used to uncover insights of how patrons got hurt in amusement rides, Saferparks do not recommend the dataset to be used for comparison across states, parks, rides or years [@saferpark]. One of the reasons for this is that State laws in relation to amusement ride related injury reporting vary widely. For instance, it is mandatory to report go-kart accidents in Flordia but not in California.
+While the dataset can be used to uncover insights of how patrons got hurt in amusement rides, Saferparks do not recommend the dataset to be used for comparison across states, parks, rides or years [@saferpark]. One of the reasons for this is that State laws in relation to amusement ride related injury reporting vary widely. For instance, it is mandatory to report go-kart accidents in Florida but not in California.
 
 Due to these limitations, the report will not use the Saferparks dataset to analyze nation-wide patterns. Hence, this report will largely focus on amusement park accidents that occur in Texas, United States of America.
 
@@ -317,9 +317,9 @@ temp %>%
 tx_kid <- mean(temp$age<=15 & temp$age>5)
 ```
 
-Table \@ref(tab:tx-pm1-tab) shows the ranking of injuried ages. Injuried babies occupies around 5% of the dataset. In the dataset `r round(tx_kid, 2)`% injuried are under 16, except babies. We distinguish babies from other age groups because babies are carried by their parents and babies are not able to move to any places by their own. 
+Table \@ref(tab:tx-pm1-tab) shows the ranking of injured ages. Injured babies occupies around 5% of the dataset. In the dataset `r round(tx_kid, 2)`% injured are under 16, except babies. We distinguish babies from other age groups because babies are carried by their parents and babies are not able to move to any places by their own. 
 
-If we take gender into account, we can see gender distributions by age. Table \@ref(tab:tx-pm1-gender) shows the top-10 rankings by gender and age. In top-10 list, it seems that more girls get injuried than boys in amusement parks in Texas. 
+If we take gender into account, we can see gender distributions by age. Table \@ref(tab:tx-pm1-gender) shows the top-10 rankings by gender and age. In top-10 list, it seems that more girls get injured than boys in amusement parks in Texas. 
 
 In summary, the age range of the injured is broad (from 0 to 71). But the most injured are young people, especially for children (under 18). And the fact that around 5 percent of the injured are babies indicates that parents must take care of their babies in amusement parks. They should put their babies in first priority.  
 
@@ -362,9 +362,9 @@ safer_parks %>%
   wordcloud2(word, size = 1)
 ```
 
-First, We create a new list containing common workds, such as *injury*, *injuries* and *pain*. Second, we remove unimportant words from injury description. Finally, the word cloud is created. We can see that within the word cloud (Fig \@ref(fig:sq1-wordcloud)) bigger the word more often it appears. Head may be the most frequent word; so, we may assume that most people get hurt on their heads.
+First, We create a new list containing common words, such as *injury*, *injuries* and *pain*. Second, we remove unimportant words from injury description. Finally, the word cloud is created. We can see that within the word cloud (Fig \@ref(fig:sq1-wordcloud)) bigger the word more often it appears. Head may be the most frequent word; so, we may assume that most people get hurt on their heads.
 
-In summary, in high proportion of injury cases, the injured get hurt of their upper half of the body.  Amusement parks should pay extra attention on roller coaster because unlike other subjects, roller coaster's failure can cause severe consequence --- no one can escape once a roller coaster is launched. First, they should regularly maintain the roller coaster, in order to reduce mechanical failure. Second, train the staff and ask them to check to-do list every time launch the equipments. Third, ask visitors to follow the safety guide. Furthermore, visitors should also protect their head, neck and shoulder. Those body parts are vulnerable and important and they are always injuried in amusement park injury cases.
+In summary, in high proportion of injury cases, the injured get hurt of their upper half of the body.  Amusement parks should pay extra attention on roller coaster because unlike other subjects, roller coaster's failure can cause severe consequence --- no one can escape once a roller coaster is launched. First, they should regularly maintain the roller coaster, in order to reduce mechanical failure. Second, train the staff and ask them to check to-do list every time launch the equipments. Third, ask visitors to follow the safety guide. Furthermore, visitors should also protect their head, neck and shoulder. Those body parts are vulnerable and important and they are always injured in amusement park injury cases.
 
 ## Does amusement ride injuries have seasonal characteristics?
 
@@ -495,7 +495,7 @@ temp <- temp %>%
 
 ## What amusement parks have most injuries in Texas?
 
-Since the injury reporting mechanism varies from state to state, we only analysed the injuries in each park in Texas (assuming that the injury reporting mechanism is the same across parks in Texas). We want to analyse not only the injuries happened every year in each park, but also the total injuries accross all the years in each park, so we also kept the injury records with missing injury_year values. Figure \@ref(fig:texas-parks-injuries) shows the top 10 amusement parks which have the most injuries in Texas. We can see that the Six Flags Over Texas park has the most amusement park injuries in Texas. The Skygroup Investments LLC DBA iFly Houston Memorial	park had a significant large number of injuries in 2015, while the Typhoon Texas - Austin Park had lots of injuries in 2016.
+Since the injury reporting mechanism varies from state to state, we only analysed the injuries in each park in Texas (assuming that the injury reporting mechanism is the same across parks in Texas). We want to analyse not only the injuries happened every year in each park, but also the total injuries across all the years in each park, so we also kept the injury records with missing injury_year values. Figure \@ref(fig:texas-parks-injuries) shows the top 10 amusement parks which have the most injuries in Texas. We can see that the Six Flags Over Texas park has the most amusement park injuries in Texas. The Sky group Investments LLC DBA iFly Houston Memorial	park had a significant large number of injuries in 2015, while the Typhoon Texas - Austin Park had lots of injuries in 2016.
 
 ```{r texas-parks-injuries, fig.align='center', fig.cap="Amusement Park Injuries Ranking in Texas"}
 tx_injuries_top <- tx_injuries
@@ -504,7 +504,7 @@ tx_injuries_top$name_of_operation <- tolower(tx_injuries_top$name_of_operation)
 
 tx_injuries_tta <- tx_injuries_top %>% 
   filter(str_detect(name_of_operation, "^typhoon")) %>% 
-  mutate(name_of_operation = "typhoon texas - austin")
+  mutate(name_of_operation = "typhoon taxes - austin")
 
 tx_injuries_other <- tx_injuries_top %>% 
   filter(str_detect(name_of_operation, "^typhoon", negate = TRUE))
@@ -536,9 +536,9 @@ tx_injuries_top_lower %>%
 ```
 
 ## What manufacturer's product caused the most amusement park injuries?
-In this part, we will find out the manufacturers whose products caused most amusement injuries over the years. This could remind amusement parks have devices from these manufacturers to maintain their devices carefully. Figure \@ref(fig:manufacturer-plot) shows the top 10 manufacturers whose products caused most amusement injuries over the years and the percentage of total injuries recorded in the safer_park data set.
+In this part, we will find out the manufacturers whose products caused most amusement injuries over the years. This could remind amusement parks who have devices from these manufacturers to maintain their devices carefully. Figure \@ref(fig:manufacturer-plot) shows the top 10 manufacturers whose products caused most amusement injuries over the years and the percentage of total injuries recorded in the safer_park data set.
 
-There are 254 manufacturers' records in this data set, and the total injuries of them is 8793, while the total injuries of the top 10 manufacturers is 2841. The top 10 manufacturers accounted for 32.3% of all amusement park injuries. It' is worth's noteworthy that in-house manufactured devices accounts for more than 10% of total injuries.
+There are 254 manufacturers' records in this data set, and the total injuries of them is 8793, while the total injuries of the top 10 manufacturers is 2841. The top 10 manufacturers accounted for 32.3% of all amusement park injuries. It's worth noteworthy that in-house manufactured devices accounts for more than 10% of total injuries.
 
 ```{r manufacturer}
 manufacturers <- safer_parks %>% 
